refactor jobjson to job_json
